css changes to the stepper buttons - fix button overflow problems - align the two buttons in the seed ui properly - changes the wizard stepper to not render the back/forwad buttons if they are disabled

--- a/src/styles/document-seeder.css
+++ b/src/styles/document-seeder.css
@@ -34,11 +34,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .document-seeder-toggle-highlight {
-  margin-bottom: 0.5em;
   height: auto;
 }
 
