--- a/src/styles/document-wizard-stepper.css
+++ b/src/styles/document-wizard-stepper.css
@@ -15,6 +15,8 @@
   margin: 0.5em;
   margin-right: 0;
   font-size: 1.25em;
+  display: flex;
+  flex-direction: row;
 }
 
 .document-wizard-stepper-back-spinner,
